feat(service): 인기 태그 조회 로직 구현